[package]
name = "musify-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = { version = "0.3.5" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }

songbird = "0.2.0"
serenity = "0.10"